k8s-yaml/minio/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: minio
  namespace: armory
spec:
  rules:
  - host: minio.od.com
    http:
      paths:
      - path: /
        backend:
          serviceName: minio
          servicePort: 80
